# com-notifier

./: COM Notifier.lnk  Cargo.toml  README.md  comport-register.reg
src/: main.rs
